@@ -1,16 +1,17 @@
 package backend.test;
 
 import backend.OrderHandler;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
-import static org.junit.jupiter.api.Assertions.*;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 public class OrderHandlerTest {
 
@@ -21,73 +22,153 @@ public class OrderHandlerTest {
         handler = new OrderHandler();
     }
 
-    // =========================================================================
-    // SECTION 1: PENGUJIAN FUNGSI KALKULATOR INTERNAL
-    // =========================================================================
-
-    @Test
-    public void testCalculatePriceTShirtGrosirLebihDari100() {
-        // T-Shirt beli 105 pcs -> Dapat diskon 20% dari 50.000 = 40.000
-        // Total = 40.000 * 105 = 4.200.000
-        double total = handler.calculateTotalPrice("tshirt", 105, false, 1);
-        assertEquals(4200000.0, total, "Diskon grosir T-Shirt > 100 salah");
-    }
-
-    @Test
-    public void testCalculatePriceHoodieCustomKerumitanRendah() {
-        // Hoodie beli 5 pcs (tidak dapat diskon kuantitas, harga tetap 150.000)
-        // Custom tingkat 1 -> tambahan 10.000 per pcs. Harga unit = 160.000
-        // Total = 160.000 * 5 = 800.000
-        double total = handler.calculateTotalPrice("hoodie", 5, true, 1);
-        assertEquals(800000.0, total, "Kalkulasi hoodie kustom tingkat 1 salah");
-    }
-
-    @Test
-    public void testCalculatePriceBatasStokNolAtauNegatif() {
-        // Memastikan jika qty bernilai 0 atau negatif, hasil kalkulasi tetap aman (0)
-        double totalNol = handler.calculateTotalPrice("tshirt", 0, false, 1);
-        double totalNegatif = handler.calculateTotalPrice("tshirt", -5, false, 1);
-        
-        assertEquals(0.0, totalNol);
-        assertEquals(0.0, totalNegatif, "Kuantitas negatif harus menghasilkan total 0");
-    }
-
-    // =========================================================================
-    // SECTION 2: PENGUJIAN FUNGSI PENULISAN BERKAS JSON (ISOLASI)
-    // =========================================================================
-
-    // JUnit 5 akan otomatis membuat folder sementara di sistem dan menyuntikkannya ke sini
     @TempDir
     Path sharedTempDir;
 
+    // ==========================================================
+    // TEST calculateTotalPrice()
+    // ==========================================================
+
     @Test
-    public void testSaveOrderRecordMenulisJsonDenganBenar() throws IOException {
-        // 1. Arrange: Siapkan path file orders.json tiruan di dalam folder temporary
+    public void testTshirtQtyLebihDari100Diskon20Persen() {
+        double total = handler.calculateTotalPrice("tshirt", 105, false, 1);
+        assertEquals(4200000.0, total);
+    }
+
+    @Test
+    public void testTshirtQtyAntara51Dan100Diskon10Persen() {
+        double total = handler.calculateTotalPrice("tshirt", 60, false, 1);
+        assertEquals(2700000.0, total);
+    }
+
+    @Test
+    public void testTshirtTanpaDiskon() {
+        double total = handler.calculateTotalPrice("tshirt", 10, false, 1);
+        assertEquals(500000.0, total);
+    }
+
+    @Test
+    public void testHoodieDiskon15Persen() {
+        double total = handler.calculateTotalPrice("hoodie", 25, false, 1);
+        assertEquals(3187500.0, total);
+    }
+
+    @Test
+    public void testHoodieTanpaDiskon() {
+        double total = handler.calculateTotalPrice("hoodie", 10, false, 1);
+        assertEquals(1500000.0, total);
+    }
+
+    @Test
+    public void testCustomComplexity1() {
+        double total = handler.calculateTotalPrice("hoodie", 5, true, 1);
+        assertEquals(800000.0, total);
+    }
+
+    @Test
+    public void testCustomComplexity2() {
+        double total = handler.calculateTotalPrice("tshirt", 5, true, 2);
+        assertEquals(375000.0, total);
+    }
+
+    @Test
+    public void testCustomComplexity3QtyKurang10() {
+        double total = handler.calculateTotalPrice("tshirt", 5, true, 3);
+        assertEquals(500000.0, total);
+    }
+
+    @Test
+    public void testCustomComplexity3QtyMinimal10() {
+        double total = handler.calculateTotalPrice("tshirt", 15, true, 3);
+        assertEquals(1275000.0, total);
+    }
+
+    @Test
+    public void testQtyNol() {
+        double total = handler.calculateTotalPrice("tshirt", 0, false, 1);
+        assertEquals(0.0, total);
+    }
+
+    @Test
+    public void testQtyNegatif() {
+        double total = handler.calculateTotalPrice("tshirt", -5, false, 1);
+        assertEquals(0.0, total);
+    }
+
+    @Test
+    public void testProdukTidakDikenal() {
+        double total = handler.calculateTotalPrice("sepatu", 10, false, 1);
+        assertEquals(0.0, total);
+    }
+
+    // ==========================================================
+    // TEST saveOrderRecord()
+    // ==========================================================
+
+    @Test
+    public void testSaveOrderRecordPertama() {
+
+        handler.saveOrderRecord(
+                "ORDER-001",
+                "tshirt",
+                2,
+                100000,
+                "Test Pertama"
+        );
+
+        File file = new File("./data/orders.json");
+
+        assertTrue(file.exists());
+        assertTrue(file.length() > 0);
+    }
+
+    @Test
+    public void testSaveOrderRecordDuaKali() {
+
+        handler.saveOrderRecord(
+                "ORDER-001",
+                "tshirt",
+                2,
+                100000,
+                "Order Pertama"
+        );
+
+        handler.saveOrderRecord(
+                "ORDER-002",
+                "hoodie",
+                1,
+                150000,
+                "Order Kedua"
+        );
+
+        File file = new File("./data/orders.json");
+
+        assertTrue(file.exists());
+        assertTrue(file.length() > 0);
+    }
+
+    // ==========================================================
+    // TEST SIMULASI JSON FILE
+    // ==========================================================
+
+    @Test
+    public void testJsonFileValid() throws IOException {
+
         Path fakeOrdersPath = sharedTempDir.resolve("orders.json");
-        File fakeFile = fakeOrdersPath.toFile();
 
-        // 2. Act: Jalankan fungsi penulisan rekap pesanan ke file
-        // Kita simulasikan menulis data pesanan baru
-        String uuid = "test-uuid-12345";
-        
-        /* Catatan: Karena di dalam OrderHandler.java kode path tertulis hardcode "../data/orders.json",
-         untuk unit testing murni kita memastikan logic pembentukan string JSON di file tersebut valid.
-         Kita panggil method bantu penulisan atau kita verifikasi struktur string yang ditulis.
-        */
-        String expectedJsonContent = "{\"id\":\"test-uuid-12345\",\"type\":\"tshirt\",\"qty\":2,\"total\":100000.00,\"notes\":\"Sablon\"}";
+        String jsonContent =
+                "[{\"id\":\"TEST123\",\"type\":\"tshirt\",\"qty\":2,\"total\":100000.00}]";
 
-        // Simulasikan pembuatan array JSON seperti yang dilakukan method asli
-        String initialArray = "[\n  " + expectedJsonContent + "\n]";
-        Files.write(fakeOrdersPath, initialArray.getBytes(StandardCharsets.UTF_8));
+        Files.write(
+                fakeOrdersPath,
+                jsonContent.getBytes(StandardCharsets.UTF_8)
+        );
 
-        // 3. Assert: Membaca kembali berkas tiruan dan memeriksa isinya
-        assertTrue(fakeFile.exists(), "Berkas JSON seharusnya berhasil dibuat");
-        
-        String fileContent = new String(Files.readAllBytes(fakeOrdersPath), StandardCharsets.UTF_8);
-        
-        // Memastikan isi file mengandung data UUID dan format JSON array-nya tidak rusak
-        assertTrue(fileContent.contains(uuid), "File JSON harus menyimpan ID Pesanan yang benar");
-        assertTrue(fileContent.contains("\"type\":\"tshirt\""), "File JSON harus menyimpan tipe produk yang benar");
-        assertTrue(fileContent.trim().startsWith("[") && fileContent.trim().endsWith("]"), "Format file harus berupa Array JSON yang valid");
+        assertTrue(Files.exists(fakeOrdersPath));
+
+        String content = Files.readString(fakeOrdersPath);
+
+        assertTrue(content.contains("TEST123"));
+        assertTrue(content.contains("tshirt"));
     }
 }
